--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FnexCloud | Quiz Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic aperiam esse dolorum iure nihil nobis, cumque, ab eaque eius autem eveniet? Nesciunt sunt blanditiis earum ad veritatis ullam placeat accusamus.</title>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
