--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href="#" class="quiz">Quiz</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
+                <a href="download.html">Calculator App</a>
             </nav>
         </header>
 
