--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
                 <a href="index.html" class="active">Home</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
+                <a href="download.html">Calculator App</a>
             </nav>
         </header>
 
