--- a/download.html
+++ b/download.html
@@ -74,7 +74,7 @@
                 <div class="home-content">
                     <h1>FnexCloud</h1>
                     <p>Download a simple calculator app for windows, .NET is required</p>
-                    <a href="fnexcalculator" download="my-app" class="start-btn">
+                    <a href="fnexcalculator" download class="start-btn">
                         Download
                     </a>
                 </div>
