--- a/download.html
+++ b/download.html
@@ -18,7 +18,7 @@
                 <a href="#" class="quiz">Quiz</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
-                <a href="download.html">Calculator App</a>
+                <a href="download.html">Fnex Calculator App</a>
             </nav>
         </header>
 
@@ -74,7 +74,7 @@
                 <div class="home-content">
                     <h1>FnexCloud</h1>
                     <p>Download a simple calculator app for windows, .NET is required</p>
-                    <a href="fnexcalculator" download class="start-btn">
+                    <a href="fnexcalculator" download="fnexcalculator" class="start-btn">
                         Download
                     </a>
                 </div>
