--- a/download.html
+++ b/download.html
@@ -18,7 +18,7 @@
                 <a href="#" class="quiz">Quiz</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
-                <a href="download.html">Fnex Calculator App</a>
+                <a href="download.html">Calculator App</a>
             </nav>
         </header>
 
