--- a/download.html
+++ b/download.html
@@ -73,7 +73,7 @@
             <section class="home">
                 <div class="home-content">
                     <h1>FnexCloud</h1>
-                    <p>Download a simple calculator app for windows, .NET is required, you can install .NET, by trying to open the app without .NET</p>
+                    <p>Download a simple calculator app for windows, .NET is required, you can install .NET, by trying to open the app without .NET!</p>
                     <a href="fnexcalculator.zip" download="fnexcalculator.zip" class="download-btn">
                         Download
                     </a>
