--- a/download.html
+++ b/download.html
@@ -72,9 +72,9 @@
 
             <section class="home">
                 <div class="home-content">
-                    <h1>FnexCloud</h1>
+                    <h1>Fnex Calculator 1.4</h1>
                     <p>Download a simple calculator app for windows, .NET is required, you can install .NET, by trying to open the app without .NET!!!!!</p>
-                    <a href="FnexCalculatorSetupInstaller.exe" download="FnexCalculatorSetupInstaller.exe" class="download-btn">
+                    <a href="FnexCalculator1.4Installer.exe" download="FnexCalculator1.4Installer.exe" class="download-btn">
                         Download
                     </a>
                 </div>
