--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
                 <a href="download.html">Calculator App</a>
-                <a href="download.html">Chat</a>
+                <a href="chat.html">Chat</a>
             </nav>
         </header>
 
