--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
                 <a href="download.html">Calculator App</a>
+                <a href="chat.html">Chat</a>
             </nav>
         </header>
 
