--- a/download.html
+++ b/download.html
@@ -14,12 +14,11 @@
             <img src="Images/logo.png" class="logo">
 
             <nav class="navbar">
-                <a href="index.html" class="active">Home</a>
-                <a href="#" class="quiz">Quiz</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-                <a href="download.html">Calculator App</a>
-                <a href="chat.html">Chat</a>
+                <a href="index" class="active">Home</a>
+                <a href="about">About</a>
+                <a href="contact">Contact</a>
+                <a href="download">Calculator App</a>
+                <a href="chat">Chat</a>
             </nav>
         </header>
 
