--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href="#" class="quiz">Quiz</a>
                 <a href="about">About</a>
                 <a href="contact">Contact</a>
+                <a href="dragons">Dragons</a>
                 <a href="download">Calculator App</a>
                 <a href="chat">Chat</a>
             </nav>
