--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <section class="quiz-section">
                 <div class="quiz-box">
-                    <h1>Coding Quiz</h1>
+                    <h1>Quiz</h1>
                     <div class="quiz-header">
                         <span>FnexCloud Quiz</span>
                         <span class="header-score">Score: 0 / 5</span>
