--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 
     <style>
