--- a/404.html
+++ b/404.html
@@ -106,6 +106,12 @@
 
 <body>
 
+    <main class="main">
+        <header class="header">
+            <img src="Images/logo.png" class="logo">
+        </header>
+    </main>
+
     <div id="notfound">
         <div class="notfound">
             <div class="notfound-404 mb-6">
