--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="contact">Contact</a>
                 <a href="dragons">Dragons</a>
                 <a href="download">Calculator App</a>
-                <a href="chat">FnexCloud Chat</a>
+                <a href="chat">Chat</a>
             </nav>
         </header>
 
