--- a/404.html
+++ b/404.html
@@ -75,8 +75,8 @@
             <section class="home">
                 <div class="home-content">
                     <h1>404</h1>
-                    <p>This page dows not exist</p>
-                    <a href="index" class=download-btn></a>
+                    <p>This page does not exist</p>
+                    <a href="index" class=download-btn>Go to home</a>
                 </div>
             </section>
         </div>
