--- a/404.html
+++ b/404.html
@@ -76,7 +76,7 @@
                 <div class="home-content">
                     <h1>404</h1>
                     <p>This page does not exist</p>
-                    <a href="index" class=download-btn>Home</a>
+                    <a href="index" class=download-btn>Go Home</a>
                 </div>
             </section>
         </div>
